// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get cell sets hierarchy selector by type test returns correctly by more than one type 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "key": "test-1",
      },
      Object {
        "key": "test-2",
      },
    ],
    "key": "test",
    "name": "Test",
    "type": "firstType",
  },
  Object {
    "children": Array [
      Object {
        "key": "anotherTest-1",
      },
      Object {
        "key": "anotherTest-2",
      },
    ],
    "key": "anotherTest",
    "name": "AnotherTest",
    "type": "anotherType",
  },
]
`;

exports[`Get cell sets hierarchy selector by type test returns correctly by one key 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "key": "test-1",
      },
      Object {
        "key": "test-2",
      },
    ],
    "key": "test",
    "name": "Test",
    "type": "firstType",
  },
]
`;
